@@ -6,8 +6,6 @@ import com.baomidou.mybatisplus.core.metadata.OrderItem;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.fit2cloud.base.entity.CloudAccount;
 import com.fit2cloud.base.service.IBaseCloudAccountService;
-import com.fit2cloud.base.service.IBaseOrganizationService;
-import com.fit2cloud.base.service.IBaseWorkspaceService;
 import com.fit2cloud.common.utils.ColumnNameUtil;
 import com.fit2cloud.common.utils.PageUtil;
 import com.fit2cloud.constants.DiskTypeConstants;
@@ -17,9 +15,13 @@ import com.fit2cloud.controller.response.BarTreeChartData;
 import com.fit2cloud.controller.response.ChartData;
 import com.fit2cloud.dao.mapper.AnalyticsDiskMapper;
 import com.fit2cloud.dto.AnalyticsDiskDTO;
+import com.fit2cloud.dto.AnalyticsServerDTO;
 import com.fit2cloud.dto.KeyValue;
 import com.fit2cloud.service.IDiskAnalysisService;
+import com.fit2cloud.service.IServerAnalysisService;
+import com.fit2cloud.utils.OperationUtils;
 import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.collections4.list.TreeList;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
@@ -42,39 +44,34 @@ public class DiskAnalysisService implements IDiskAnalysisService {
     @Resource
     private IBaseCloudAccountService iBaseCloudAccountService;
     @Resource
-    private IBaseWorkspaceService iBaseWorkspaceService;
-    @Resource
-    private IBaseOrganizationService iBaseOrganizationService;
+    private IServerAnalysisService iServerAnalysisService;
 
     @Override
     public IPage<AnalyticsDiskDTO> pageDisk(PageDiskRequest request) {
         Page<AnalyticsDiskDTO> page = PageUtil.of(request, AnalyticsDiskDTO.class, new OrderItem(ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getCreateTime, true), false), true);
         // 构建查询参数
         QueryWrapper<AnalyticsDiskDTO> wrapper = addServerQuery(request);
-        IPage<AnalyticsDiskDTO> result = analyticsDiskMapper.pageList(page, wrapper);
-        return result;
+        return analyticsDiskMapper.pageList(page, wrapper);
     }
 
     private QueryWrapper<AnalyticsDiskDTO> addServerQuery(PageDiskRequest request) {
         QueryWrapper<AnalyticsDiskDTO> wrapper = new QueryWrapper<>();
         wrapper.like(StringUtils.isNotBlank(request.getName()), ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getDiskName,true), request.getName());
         wrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getAccountId, true), request.getAccountIds());
-        wrapper.notIn(true, ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getStatus,true), Arrays.asList("deleted"));
+        wrapper.notIn(true, ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getStatus,true), List.of("deleted"));
         return wrapper;
     }
 
     @Override
     public List<CloudAccount> getAllCloudAccount() {
         QueryWrapper<CloudAccount> queryWrapper = new QueryWrapper<>();
-        List<CloudAccount> accountList = iBaseCloudAccountService.list(queryWrapper);
-        return accountList;
+        return iBaseCloudAccountService.list(queryWrapper);
     }
 
     @Override
     public Map<String, List<KeyValue>> spread(ResourceAnalysisRequest request) {
         Map<String,List<KeyValue>> result = new HashMap<>();
-        List<CloudAccount> accountList = getAllCloudAccount();
-        Map<String,CloudAccount> accountMap = accountList.stream().collect(Collectors.toMap(CloudAccount::getId,v->v,(k1,k2)->k1));
+        Map<String,CloudAccount> accountMap = iServerAnalysisService.getAllAccountIdMap();
         if(accountMap.size()==0){
             return result;
         }
@@ -82,23 +79,23 @@ public class DiskAnalysisService implements IDiskAnalysisService {
         queryWrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()),ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getAccountId,true),request.getAccountIds());
         //只统计已挂在与可用的
         queryWrapper.in(true,ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getStatus,true), Arrays.asList("available","in_use"));
-        List<AnalyticsDiskDTO> vmList = analyticsDiskMapper.list(queryWrapper);
+        List<AnalyticsDiskDTO> diskList = analyticsDiskMapper.list(queryWrapper);
         Map<String,String> statusMap = new HashMap<>();
         statusMap.put("available","空闲");
         statusMap.put("in_use","已挂载");
         if(request.isStatisticalBlock()){
-            Map<String,Long> byAccountMap = vmList.stream().filter(v->StringUtils.isNotEmpty(v.getAccountId())).collect(Collectors.groupingBy(AnalyticsDiskDTO::getAccountId, Collectors.counting()));
+            Map<String,Long> byAccountMap = diskList.stream().filter(v->StringUtils.isNotEmpty(v.getAccountId())).collect(Collectors.groupingBy(AnalyticsDiskDTO::getAccountId, Collectors.counting()));
             result.put("byAccount",byAccountMap.entrySet().stream().map(c -> new KeyValue(StringUtils.isEmpty(accountMap.get(c.getKey()).getName())?c.getKey():accountMap.get(c.getKey()).getName(), c.getValue()) {}).collect(Collectors.toList()));
-            Map<String,Long> byStatusMap = vmList.stream().collect(Collectors.groupingBy(AnalyticsDiskDTO::getStatus, Collectors.counting()));
+            Map<String,Long> byStatusMap = diskList.stream().collect(Collectors.groupingBy(AnalyticsDiskDTO::getStatus, Collectors.counting()));
             result.put("byStatus",byStatusMap.entrySet().stream().map(c -> new KeyValue(statusMap.get(c.getKey()), c.getValue()) {}).collect(Collectors.toList()));
-            Map<String,Long> byTypeMap = vmList.stream().collect(Collectors.groupingBy(AnalyticsDiskDTO::getDiskType, Collectors.counting()));
+            Map<String,Long> byTypeMap = diskList.stream().collect(Collectors.groupingBy(AnalyticsDiskDTO::getDiskType, Collectors.counting()));
             result.put("byType",byTypeMap.entrySet().stream().map(c -> new KeyValue(DiskTypeConstants.getName(c.getKey()), c.getValue()) {}).collect(Collectors.toList()));
         }else{
-            Map<String,LongSummaryStatistics> byAccountMap = vmList.stream().filter(v->StringUtils.isNotEmpty(v.getAccountId())).collect(Collectors.groupingBy(AnalyticsDiskDTO::getAccountId, Collectors.summarizingLong(AnalyticsDiskDTO::getSize)));
+            Map<String,LongSummaryStatistics> byAccountMap = diskList.stream().filter(v->StringUtils.isNotEmpty(v.getAccountId())).collect(Collectors.groupingBy(AnalyticsDiskDTO::getAccountId, Collectors.summarizingLong(AnalyticsDiskDTO::getSize)));
             result.put("byAccount",byAccountMap.entrySet().stream().map(c -> new KeyValue(StringUtils.isEmpty(accountMap.get(c.getKey()).getName())?c.getKey():accountMap.get(c.getKey()).getName(), c.getValue().getSum()) {}).collect(Collectors.toList()));
-            Map<String,LongSummaryStatistics> byStatusMap = vmList.stream().collect(Collectors.groupingBy(AnalyticsDiskDTO::getStatus, Collectors.summarizingLong(AnalyticsDiskDTO::getSize)));
+            Map<String,LongSummaryStatistics> byStatusMap = diskList.stream().collect(Collectors.groupingBy(AnalyticsDiskDTO::getStatus, Collectors.summarizingLong(AnalyticsDiskDTO::getSize)));
             result.put("byStatus",byStatusMap.entrySet().stream().map(c -> new KeyValue(statusMap.get(c.getKey()), c.getValue().getSum()) {}).collect(Collectors.toList()));
-            Map<String,LongSummaryStatistics> byTypeMap = vmList.stream().collect(Collectors.groupingBy(AnalyticsDiskDTO::getDiskType, Collectors.summarizingLong(AnalyticsDiskDTO::getSize)));
+            Map<String,LongSummaryStatistics> byTypeMap = diskList.stream().collect(Collectors.groupingBy(AnalyticsDiskDTO::getDiskType, Collectors.summarizingLong(AnalyticsDiskDTO::getSize)));
             result.put("byType",byTypeMap.entrySet().stream().map(c -> new KeyValue(DiskTypeConstants.getName(c.getKey()), c.getValue().getSum()) {}).collect(Collectors.toList()));
         }
         return result;
@@ -147,121 +144,81 @@ public class DiskAnalysisService implements IDiskAnalysisService {
         return tempChartDataList;
     }
 
-    public Map<String,List<BarTreeChartData>> analyticsVmCloudServerByOrgWorkspace(ResourceAnalysisRequest request){
+    public Map<String,List<BarTreeChartData>> analyticsVmCloudDiskByOrgWorkspace(ResourceAnalysisRequest request){
         Map<String,List<BarTreeChartData>> result = new HashMap<>();
-        QueryWrapper<AnalyticsDiskDTO> wrapper = new QueryWrapper<>();
-        wrapper.eq("org_workspace.type","workspace");
-        wrapper.ne(ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getStatus,true),"Deleted");
-        wrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getAccountId, true), request.getAccountIds());
-        wrapper.groupBy(true,Arrays.asList("org_workspace.id","org_workspace.name"));
-        //所有工作空间
-        List<BarTreeChartData> workspaceList = iBaseWorkspaceService.list().stream().map(v->{
-            BarTreeChartData barTreeChartData = new BarTreeChartData();
-            barTreeChartData.setId(v.getId());
-            barTreeChartData.setName(v.getName());
-            barTreeChartData.setValue(0L);
-            barTreeChartData.setPId(v.getOrganizationId());
-            return barTreeChartData;
-        }).collect(Collectors.toList());
-        if(request.isStatisticalBlock()){
-            List<BarTreeChartData> list = analyticsDiskMapper.analyticsVmCloudDiskByOrgWorkspace(wrapper);
-            setAnalyticsData(workspaceList, list);
-        }else{
-            List<BarTreeChartData> list = analyticsDiskMapper.analyticsVmCloudDiskByOrgWorkspaceFromSize(wrapper);
-            setAnalyticsData(workspaceList, list);
-        }
+        List<BarTreeChartData> workspaceList =  workspaceSpread(request);
         if(request.isAnalysisWorkspace()){
-            workspaceList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
-            result.put("all",workspaceList);
             result.put("tree",workspaceList);
             return result;
-        }
-        Map<String,List<BarTreeChartData>> workspaceMap = workspaceList.stream().collect(Collectors.groupingBy(BarTreeChartData::getPId));
-        QueryWrapper<AnalyticsDiskDTO> orgWrapper =new QueryWrapper<>();
-        orgWrapper.eq("org_workspace.type","org");
-        orgWrapper.ne(ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getStatus,true),"Deleted");
-        orgWrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getAccountId, true), request.getAccountIds());
-        orgWrapper.groupBy(true,Arrays.asList("org_workspace.id","org_workspace.name"));
-        //所有组织
-        List<BarTreeChartData> orgList = iBaseOrganizationService.list().stream().map(v->{
-            BarTreeChartData barTreeChartData = new BarTreeChartData();
-            barTreeChartData.setId(v.getId());
-            barTreeChartData.setName(v.getName());
-            barTreeChartData.setValue(0L);
-            barTreeChartData.setPId(v.getPid());
-            return barTreeChartData;
-        }).collect(Collectors.toList());
-        if(request.isStatisticalBlock()){
-            List<BarTreeChartData> list = analyticsDiskMapper.analyticsVmCloudDiskByOrgWorkspace(orgWrapper);
-            setAnalyticsData(orgList, list);
         }else{
-            List<BarTreeChartData> list = analyticsDiskMapper.analyticsVmCloudDiskByOrgWorkspaceFromSize(orgWrapper);
-            setAnalyticsData(orgList, list);
-        }
-        result.put("all",orgList);
-        result.put("tree",new ArrayList<>());
-        if(CollectionUtils.isNotEmpty(orgList)){
-            orgList.stream().forEach(v->{
-                if(workspaceMap.get(v.getId())!=null){
-                    // 设置工作空间
-                    List<BarTreeChartData> wk = workspaceMap.get(v.getId()).stream().peek(workspace->workspace.setName(workspace.getName()+"(工作空间)")).collect(Collectors.toList());
-                    Long wkVmCount = wk.stream().mapToLong(BarTreeChartData::getValue).sum();
-                    v.setValue(v.getValue()+wkVmCount);
-                    v.setChildren(wk);
-                }else{
-                    v.setChildren(new ArrayList<>());
-                }
-            });
-            orgList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
-            List<BarTreeChartData> chartDataList = new ArrayList<>();
-            orgList.stream().filter(o->StringUtils.isEmpty(o.getPId())).forEach(v->{
-                v.setGroupName("org");
-                v.setName(v.getName()+"(组织)");
-                v.getChildren().addAll(getChildren(v,orgList,workspaceMap));
-                List<BarTreeChartData> childrenList = v.getChildren();
-                childrenList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
-                v.setChildren(childrenList);
-                chartDataList.add(v);
-            });
-            chartDataList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
-            result.put("tree",chartDataList);
+            orgSpread(request,workspaceList,result);
         }
         return result;
     }
 
-    private static void setAnalyticsData(List<BarTreeChartData> orgList, List<BarTreeChartData> list) {
+    private void orgSpread(ResourceAnalysisRequest request, List<BarTreeChartData> workspaceList, Map<String,List<BarTreeChartData>> result){
+        //组织下工作空间添加标识
+        workspaceList = workspaceList.stream().peek(v->{v.setName(v.getName()+"(工作空间)");}).collect(Collectors.toList());
+        //工作空间按组织ID分组
+        Map<String,List<BarTreeChartData>> workspaceMap = workspaceList.stream().collect(Collectors.groupingBy(BarTreeChartData::getPId));
+        //查询所有组织初始化为chart数据
+        List<BarTreeChartData> orgList = iServerAnalysisService.initOrgChartData();
+        //查询所有有授权磁盘的组织
+        QueryWrapper<AnalyticsDiskDTO> orgWrapper =new QueryWrapper<>();
+        orgWrapper.eq("org_workspace.type","org");
+        orgWrapper.ne(ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getStatus,true),"deleted");
+        orgWrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getAccountId, true), request.getAccountIds());
+        orgWrapper.groupBy(true,Arrays.asList("org_workspace.id","org_workspace.name"));
+        List<BarTreeChartData> list;
+        if (request.isStatisticalBlock()){
+            list = analyticsDiskMapper.analyticsVmCloudDiskByOrgWorkspace(orgWrapper);
+        }else{
+            list = analyticsDiskMapper.analyticsVmCloudDiskByOrgWorkspaceFromSize(orgWrapper);
+        }
+        OperationUtils.initOrgWorkspaceAnalyticsData(orgList, list);
+        //初始化子级
         orgList.forEach(v->{
-            List<BarTreeChartData> tmp = list.stream().filter(c->StringUtils.equalsIgnoreCase(v.getId(),c.getId())).collect(Collectors.toList());
-            if(CollectionUtils.isNotEmpty(tmp)){
-                v.setValue(tmp.get(0).getValue());
-            }
+            OperationUtils.setSelfToChildren(v);
+            OperationUtils.workspaceToOrgChildren(workspaceMap, v);
         });
+        orgList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
+        //扁平数据
+        result.put("all",orgList);
+        //树结构
+        List<BarTreeChartData> chartDataList = new TreeList<>();
+        orgList.stream().filter(o->StringUtils.isEmpty(o.getPId())).forEach(v->{
+            v.setGroupName("org");
+            v.setName(v.getName()+"(组织)");
+            v.getChildren().addAll(iServerAnalysisService.getChildren(v,orgList,workspaceMap));
+            chartDataList.add(v);
+        });
+        chartDataList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
+        result.put("tree",chartDataList);
+
     }
 
     /**
-     * 递归获取子级
-     * @param barTreeChartData
-     * @param list
-     * @return
+     * 工作空间上分布
+     * @param request 云磁盘分析参数
+     * @return List<BarTreeChartData>
      */
-    public List<BarTreeChartData> getChildren(BarTreeChartData barTreeChartData,List<BarTreeChartData> list,Map<String,List<BarTreeChartData>> workspaceMap) {
-        List<BarTreeChartData> childrenList = list.stream().filter(u -> Objects.equals(u.getPId(), barTreeChartData.getId())).map(
-                u -> {
-                    u.setName(u.getName()+"(子组织)");
-                    u.setGroupName("org");
-                    u.setChildren(getChildren(u, list,workspaceMap));
-                    if(workspaceMap.get(u.getId())!=null){
-                        // 设置工作空间
-                        List<BarTreeChartData> wk = workspaceMap.get(u.getId());
-                        Long wkVmCount = wk.stream().mapToLong(BarTreeChartData::getValue).sum();
-                        u.setValue(u.getValue()+wkVmCount);
-                        u.getChildren().addAll(wk);
-                    }
-                    barTreeChartData.setValue(barTreeChartData.getValue()+u.getValue());
-                    return u;
-                }
-        ).collect(Collectors.toList());
-        childrenList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
-        return childrenList;
+    private List<BarTreeChartData> workspaceSpread(ResourceAnalysisRequest request){
+        QueryWrapper<AnalyticsDiskDTO> wrapper = new QueryWrapper<>();
+        wrapper.eq("org_workspace.type","workspace");
+        wrapper.ne(ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getStatus,true),"deleted");
+        wrapper.in(CollectionUtils.isNotEmpty(request.getAccountIds()), ColumnNameUtil.getColumnName(AnalyticsDiskDTO::getAccountId, true), request.getAccountIds());
+        wrapper.groupBy(true,Arrays.asList("org_workspace.id","org_workspace.name"));
+        List<BarTreeChartData> workspaceList = iServerAnalysisService.initWorkspaceChartData();
+        List<BarTreeChartData> list;
+        if(request.isStatisticalBlock()){
+            list = analyticsDiskMapper.analyticsVmCloudDiskByOrgWorkspace(wrapper);
+        }else{
+            list = analyticsDiskMapper.analyticsVmCloudDiskByOrgWorkspaceFromSize(wrapper);
+        }
+        OperationUtils.initOrgWorkspaceAnalyticsData(workspaceList, list);
+        workspaceList.sort((o1,o2)->o2.getValue().compareTo(o1.getValue()));
+        return workspaceList;
     }
+
+
 }
